--- a/style.css
+++ b/style.css
@@ -122,14 +122,14 @@ body {
   width: 6px;
   height: 6px;
   border-radius: 50%;
-  background-color: blue;
+  background-color: rgba(0, 0, 255, 0.651);
   border: 1px solid var(--white-bg);
 }
 .link-item a .num-noti {
   margin-left: 40px;
   font-size: 12px;
   color: var(--light-text-clr);
-  background-color: blue;
+  background-color: rgba(0, 0, 255, 0.651);
   min-width: 15px;
   height: 15px;
   display: flex;
